Fixed scrollbar in sidebar

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -15,6 +15,18 @@
   //   -webkit-transform: translate3d(0, 0, 0);
   //   transform: translate3d(0, 0, 0);
   // }
+  text-align: left;
+
+  img {
+    max-width: 100%;
+    height: auto;
+    width: 10%;
+
+    &.emoji {
+      width: 20px;
+      height: 20px;
+    }
+  }
 
   @include breakpoint($large) {
     float: left;
@@ -22,6 +34,7 @@
     opacity: 0.75;
     -webkit-transition: opacity 0.2s ease-in-out;
     transition: opacity 0.2s ease-in-out;
+    text-align: right;
 
     &:hover {
       opacity: 1;
@@ -33,6 +46,16 @@
          viewport height - nav height - masthead x-padding
       */
       max-height: calc(100vh - #{$nav-height} - 2em);
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      width: 15vh;
+  
+      &.emoji {
+        width: 20px;
+        height: 20px;
+      }
     }
   }
 
@@ -59,29 +82,6 @@
     font-family: $sans-serif;
     font-size: $type-size-6;
     line-height: 1.5;
-  }
-
-  img {
-    max-width: 90%;
-    height: auto;
-    width: auto;
-
-    &.emoji {
-      width: 20px;
-      height: 20px;
-    }
-  }
-  @media only screen and (max-width: 1151px) {
-    img {
-      max-width: 10%;
-      height: auto;
-      width: auto;
-
-      &.emoji {
-        width: 20px;
-        height: 20px;
-      }
-    }
   }
 }
 
